# TrustDelivery-Admin

./: .gitignore  README.md  package.json  seed_notifications.sql
backend/: .env.example  Cargo.toml
backend/migrations/: 001_initial_schema.sql  002_seed_data.sql  003_admin_addon_for_existing_supabase.sql  004_admin_addon_to_merchant_db.sql  005_add_missing_delivery_columns.sql  006_add_cod_fields.sql  007_add_email_to_riders.sql  008_assign_awaiting_deliveries.sql  009_carrier_migration.sql  010_carrier_schema_alignment.sql
backend/src/: main.rs
backend/src/config/: app_state.rs  database.rs  mod.rs
backend/src/handlers/: auth.rs  carriers.rs  collections.rs  dashboard.rs  deliveries.rs  merchants.rs  mod.rs  notifications.rs  payments.rs  reports.rs  riders.rs  settings.rs
backend/src/middleware/: auth.rs
backend/src/models/: mod.rs  requests.rs
backend/src/services/: carrier_service.rs  delivery_service.rs  merchant_service.rs  mod.rs  pricing_service.rs  rider_service.rs
backend/src/utils/: helpers.rs
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: index.ts
frontend/src/hooks/: useApi.ts
frontend/src/lib/: api.ts
frontend/src/mocks/: deliveryData.ts
frontend/src/pages/: AssignmentEngine.tsx  AwaitingAssignment.tsx  CarrierCollections.tsx  CarrierDetails.tsx  Carriers.tsx  Dashboard.tsx  Deliveries.tsx  DeliveryDetails.tsx  Disputes.tsx  MerchantDetails.tsx  Merchants.tsx  Notifications.tsx  Payments.tsx  Zones.tsx  (+6 more)
(+12 files in other folders)
